--- a/app.json
+++ b/app.json
@@ -1,5 +1,5 @@
 {
-    "name": "Aquabot - MD",
+    "name": "SAKUN - MD",
     "description": "AQUABOT  - Makes it easy and fun to use Whatsapp.",
     "logo": "https://i.ibb.co/V9jYrQC/aqua-md.jpg",
     "keywords": ["whatsapp", "userbot", "aqua", "bot", "ai" , "MD" ],
