--- a/package.json
+++ b/package.json
@@ -66,5 +66,6 @@
      "g-i-s" : "^2.1.6"  ,
      "emoji-api" : "^2.0.1" ,
      "google-it" : "^1.6.2" ,
-    "emoji-regex" : "^10.1.0"
+    "emoji-regex" : "^10.1.0",
+    "node-cron" : "^3.0.2"
  }}
