--- a/app.json
+++ b/app.json
@@ -1,14 +1,14 @@
 {
-    "name": "Aquabot - MD",
+    "name": "kaviyaofcbot - MD",
     "description": "AQUABOT  - Makes it easy and fun to use Whatsapp.",
-    "logo": "https://i.ibb.co/V9jYrQC/aqua-md.jpg",
-    "keywords": ["whatsapp", "userbot", "aqua", "bot", "ai" , "MD" ],
-    "repository": "https://github.com/sanuwaofficial/AQUABOT-MD",
+    "logo": "https://telegra.ph/file/a8a94d212fd52906b3c8d.jpg",
+    "keywords": ["whatsapp", "userbot", "kaviyaofc", "bot", "ai" , "MD" ],
+    "repository": "https://github.com/kaviyaofc1/KAVIYAOFCBOT-MD",
     "website":   "https://aquabot.ga/",
     "success_url": "https://aquabot.ga",
     "stack": "container",
      "env": {
-            "AQUA_SESSION": {
+            "KAVIYAOFC_SESSION": {
             "description": "",
             "required": true
              },
@@ -50,12 +50,12 @@
            
            "URL_1NAME": {
             "description": "",
-            "value": "🎊INSTAGRAM🎊" ,
+            "value": "✨ᴍʏ ᴡʜᴀᴛꜱᴀᴘᴘ ɢʀᴏᴜᴘ✨" ,
             "required": true
       },
            "URL_1LINK": {
-            "description": "",
-            "value": "https://www.instagram.com/__.sanuwa.__/" ,
+            "description": "https://chat.whatsapp.com/F950olXvdc6JH4ZXoH0TQx",
+            "value": "" ,
             "required": true
       },
      "URL_2NAME": {
@@ -65,12 +65,12 @@
       },
        "URL_2LINK": {
             "description": "",
-            "value": "https://github.com/sanuwaofficial" ,
+            "value": "https://github.com/kaviyaofc1" ,
             "required": true
       },
        "FOOTER": {
             "description": "",
-            "value": "𝙿𝙾𝚆𝙴𝚁𝙴𝙳 𝙱𝚈 𝙰𝚀𝚄𝙰𝙱𝙾𝚃 ²⁰²²" ,
+            "value": "POWERED BY KAVIYA ²⁰²²" ,
             "required": true
       },
      "ANTI_LINK": {
@@ -80,7 +80,7 @@
       },
        "CAPTION": {
             "description": "",
-            "value": "© 𝙶𝙴𝙽𝙴𝚁𝙰𝚃𝙴𝙳 𝙱𝚈 𝙰𝚀𝚄𝙰 ²⁰²²" ,
+            "value": "© GENARATED BY KAVIYA ²⁰²²" ,
             "required": true
       },
        "INBOX_BLOCK": {
@@ -100,43 +100,43 @@
       },
       "ALIVE_LOGO": {
             "description": "",
-            "value": "https://telegra.ph/file/85fe740b2385a55178500.jpg" ,
+            "value": "https://telegra.ph/file/a8a94d212fd52906b3c8d.jpg" ,
             "required": true
       },
      
        "SONG_DOWN": {
             "description": "",
-            "value": "*📥Downloading your song...*" ,
+            "value": "*🔁 SERACHING YOUR SONG.*" ,
             "required": true
       }, 
         "SONG_UP": {
             "description": "",
-            "value": "*📤Uploading your song...*" ,
+            "value": "*📤 UPLOADING YOUR SONG.*" ,
             "required": true
       },
           "VIDEO_DOWN": {
             "description": "",
-            "value": "*📥Downloading your video...*" ,
+            "value": "*🔁 SERACHING YOUR VIDEO.*" ,
             "required": true
       },
           "VIDEO_UP": {
             "description": "",
-            "value": "*📤Uploading your video...*" ,
+            "value": "*📤 UPLOADING YOUR VIDEO.*" ,
             "required": true
       },
           "FILE_DOWN": {
             "description": "",
-            "value": "*📥Downloading your file...*" ,
+            "value": "*🔁 SERACHING YOUR FILE.*" ,
             "required": true
       },
           "FILE_UP": {
             "description": "",
-            "value": "*📤Uploading your file...*" ,
+            "value": "*📤 UPLOADING YOUR FILE.*" ,
             "required": true
       },
           "STIC_WM": {
             "description": "",
-            "value": "⛲αqυα ⃨𝚋oƚ ࿐" ,
+            "value": "KAVIYAOFC ⃨𝚋oƚ ࿐" ,
             "required": true
       },
           "WORK_TYPE": {
