--- a/app.json
+++ b/app.json
@@ -1,209 +1,87 @@
 {
-    "name": "Aquabot - MD",
-    "description": "AQUABOT  - Makes it easy and fun to use Whatsapp.",
-    "logo": "https://i.ibb.co/V9jYrQC/aqua-md.jpg",
-    "keywords": ["whatsapp", "userbot", "aqua", "bot", "ai" , "MD" ],
-    "repository": "https://github.com/sanuwaofficial/AQUABOT-MD",
-    "website":   "https://aquabot.ga/",
-    "success_url": "https://aquabot.ga",
+    "name": "TONY-MD",
+    "description": "TONY-MD  - Makes it easy and fun to use Whatsapp.",
+    "logo": "https://telegra.ph/Waleed-bot-10-07",
+    "keywords": ["whatsapp", "userbot", "bobiz", "bot", "ai" , "MD" ],
+    "repository": "https://github.com/bobizbotmd/BOBIZ-MD",
+    "website":   "",
+    "success_url": "",
     "stack": "container",
      "env": {
-            "AQUA_SESSION": {
-            "description": "",
+            "BOBIZ_SESSION": {
+            "description": "qr session code",
             "required": true
              },
-            "NO_ONLINE": {
-            "description": "",
-            "required": true,
-             "value": "false"    
-             },
-            "ANTI_BOT": {
-            "description": "",
-            "value": "false" ,    
-            "required": true
-             },
-            "ONLY_GROUP": {
-            "description": "",
-            "value": "false" ,    
-            "required": true
-             },
-             "REMOVE_BG_API_KEY": {
-            "description": "",
-            "required": true
-             },
-            "OWN_NAME": {
-            "description": "",
-            "value": "your name" ,
-            "required": true
-             },
-             "OWN_NUMBER": {
-            "description": "",
-            "value": "94xxxxxxxxx" ,
-            "required": true
-             },
-       
-            "AUTO_REACT": {
-            "description": "",
-            "value": "false" ,
-            "required": true
-             },
+             
            
            "URL_1NAME": {
             "description": "",
-            "value": "🎊INSTAGRAM🎊" ,
+            "value": "Facebook Waleed" ,
             "required": true
       },
            "URL_1LINK": {
             "description": "",
-            "value": "https://www.instagram.com/__.sanuwa.__/" ,
+            "value": "https://www.facebook.com/profile.php?id=100039170449874" ,
             "required": true
       },
      "URL_2NAME": {
             "description": "",
-            "value": "💻GITHUB💻" ,
+            "value": "Whatsapp Waleed" ,
             "required": true
       },
        "URL_2LINK": {
             "description": "",
-            "value": "https://github.com/sanuwaofficial" ,
+            "value": "https://api.whatsapp.com/send?phone=+201283988563" ,
             "required": true
       },
-       "FOOTER": {
-            "description": "",
-            "value": "𝙿𝙾𝚆𝙴𝚁𝙴𝙳 𝙱𝚈 𝙰𝚀𝚄𝙰𝙱𝙾𝚃 ²⁰²²" ,
-            "required": true
-      },
-     "ANTI_LINK": {
-            "description": "",
-            "value": "false" ,
-            "required": true
-      },
-       "CAPTION": {
-            "description": "",
-            "value": "© 𝙶𝙴𝙽𝙴𝚁𝙰𝚃𝙴𝙳 𝙱𝚈 𝙰𝚀𝚄𝙰 ²⁰²²" ,
-            "required": true
-      },
-       "INBOX_BLOCK": {
-            "description": "",
-            "value": "false" ,
-            "required": true
-      },
-       "INBOX_BLOCK_MSG": {
-            "description": "",
-            "value": "default" ,
-            "required": true
-      },
+      
       "ALIVE_MESSAGE": {
-            "description": "",
-            "value": "default", 
+            "description": "add text",
+            "value": "defaul", 
             "required": true
       },
       "ALIVE_LOGO": {
-            "description": "",
-            "value": "https://telegra.ph/file/85fe740b2385a55178500.jpg" ,
+            "description": "add direct image url",
+            "value": "https://telegra.ph/Waleed-bot-10-07" ,
             "required": true
       },
      
        "SONG_DOWN": {
-            "description": "",
-            "value": "*📥Downloading your song...*" ,
+            "description": "song downloading text",
+            "value": "جاري تحميل الموسيقى الان..🎶✅" ,
             "required": true
       }, 
         "SONG_UP": {
-            "description": "",
-            "value": "*📤Uploading your song...*" ,
+            "description": "song uploading text",
+            "value": "جاري إرسال الموسيقى الان..🎶✅" ,
             "required": true
       },
           "VIDEO_DOWN": {
-            "description": "",
-            "value": "*📥Downloading your video...*" ,
+            "description": "video downloading text",
+            "value": "جاري تحميل الفيديو الان..🎬✅" ,
             "required": true
       },
           "VIDEO_UP": {
-            "description": "",
-            "value": "*📤Uploading your video...*" ,
+            "description": "video uploading text",
+            "value": "جاري إرسال الفيديو الان..🎬✅" ,
             "required": true
       },
           "FILE_DOWN": {
-            "description": "",
-            "value": "*📥Downloading your file...*" ,
+            "description": "file downloading text",
+            "value": "جاري تحميل الملف الان..✅" ,
             "required": true
       },
           "FILE_UP": {
-            "description": "",
-            "value": "*📤Uploading your file...*" ,
+            "description": "file uploading text",
+            "value": "جاري إرسال الملف الان..📂✅" ,
             "required": true
       },
           "STIC_WM": {
-            "description": "",
-            "value": "⛲αqυα ⃨𝚋oƚ ࿐" ,
+            "description": "حقوق الملصق. 🩹",
+            "value": "Bot Waleed "01283988563"" ,
             "required": true
-      },
-          "WORK_TYPE": {
-            "description": "",
-            "value": "public" ,
-            "required": true
-      },
-         "SUDO": {
-            "description": "",
-            "value": "" ,
-            "required": false
-      },
-         "LANGUAGE": {
-            "description": "",
-            "value": "EN" ,
-            "required": true
-      },
-         "HEROKU": {
-            "description": "",
-            "value": "true" ,
-            "required": true
-      },
-         "HEROKU_API_KEY": {
-            "description": "",
-            "value": "" ,
-            "required": true
-      },
-         "HEROKU_APP_NAME": {
-            "description": "",
-            "value": "" ,
-            "required": true
-      },
-         "BAN_MESSAGE": {
-            "description": "",
-            "value": "default" ,
-            "required": true
-      },
-         "ADD_MESSAGE": {
-            "description": "",
-            "value": "default" ,
-            "required": true
-      },
-        "PROMOTE_MESSAGE": {
-            "description": "",
-            "value": "default" ,
-            "required": true
-      },
-         "DEMOTE_MESSAGE": {
-            "description": "",
-            "value": "default" ,
-            "required": true
-      },
-         "MUTE_MESSAGE": {
-            "description": "",
-            "value": "default" ,
-            "required": true
-      },
-         "UNMUTE_MESSAGE": {
-            "description": "",
-            "value": "default" ,
-            "required": true
-      },
-        "KICKME_MESSAGE": {
-            "description": "",
-            "value": "default" ,
-            "required": true
-      }  
+      }
+         
         
      },
     "addons": [{
